# SU3_ESP32

./: .gitignore  CMakeLists.txt  Makefile  README.md  my_partitions.csv  sdkconfig  sdkconfig.defaults
components/SU3/: CMakeLists.txt  su3_client.c  su3_crc.c  su3_crc.h  su3_frame.c  su3_proto.c
components/SU3/include/: su3_client.h  su3_frame.h  su3_proto.h  su3_types.h
components/app_control/: CMakeLists.txt  app_control.c  app_control.h
components/common/: CMakeLists.txt  common.c  common.h
components/protobuf/: CMakeLists.txt  keesoncloud.pb.c  keesoncloud.pb.h  keesoncloud.proto  qs_protobuf.c  qs_protobuf.h
components/use_adc/: CMakeLists.txt  use_adc.c  use_adc.h
components/use_ble_server/: CMakeLists.txt  ble_server.c  ble_server.h
components/use_mfp/: CMakeLists.txt  use_mfp.c  use_mfp.h
components/use_pwm/: CMakeLists.txt  use_pwm.c  use_pwm.h
components/use_uart/: CMakeLists.txt  use_uart.c  use_uart.h
components/use_wifi/: CMakeLists.txt  aiot_mqtt_sign.c  aiot_mqtt_sign.h  use_ota.c  use_ota.h  use_wifi.c  use_wifi.h
docs/: SU2_V2.0_协议答疑.md  SU2_通信架构.md  SU3mqtt下发协议.docx  SU3mqtt下发协议.md  SU3传感器通信协议20260714.docx  _protocol_extract.txt  _su3_mqtt_extract.txt  ~$3mqtt下发协议.docx
flash_download_tool/configure/esp32/: spi_download.conf
id/: ID使用说明.txt
id/ID_Generator_Tool/: cmd.txt  main.cpp  test.csv  ziyong.csv
id/ID_Generator_Tool/ziyong/: ID使用.txt
main/: CMakeLists.txt  Kconfig.projbuild  main.c
博创传感器/: SU2.2更新说明.txt
博创传感器/SU2_Update/: SU2_Update.exe.config
固件/气密性测试标准/: 气囊气密性测试说明.md
(+1 files in other folders)
