idf_component_register(SRCS "pb_common.c"
                                "pb_encode.c"
                                "pb_decode.c"
                                "keesoncloud.pb.c"
                                "qs_protobuf.c"
                    INCLUDE_DIRS "."
                    REQUIRES )